# ML-Projects

./: .gitignore
house-price-ml/: create_sample_data.py  preprocessing.py  pyproject.toml  train.py
house-price-ml/data/: houses.xlsx
house-price-ml/learning/: label_encoder_practice.py  scaler_practice.py  train_test_practice.py
house-price-ml/models/: metadata_20260217_170308.json  metadata_20260219_144919.json  model_20260217_170308.pkl  preprocessor_20260217_170308.pkl
house-price-ml/notebooks/: 01_data_exploration.ipynb
