[project]
name = "house-price-ml"
version = "0.1.0"
description = "End-to-end ML project for house price prediction"
authors = [
    {name = "Satya", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Data manipulation
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    
    # Data visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Jupyter for exploration
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    
    # API development
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This is the key part - tells hatchling where your code is
[tool.hatch.build.targets.wheel]
packages = ["src/house_price_ml"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"